# ppd_projects

./: CMakeLists.txt  cuda.cu  cuda.h  main.cpp  main_cuda.cpp
